# policy-uno

./: .env.example  .gitignore  README.md  pyproject.toml  run_game.sh
docs/: BLOG.md  BLOG.tex  implementation_notes.md
opponents/: __init__.py  base.py  heuristic_agent.py  llm_openrouter.py  random_bot.py  rl_coreml.py  rl_torch.py
plots/: statistics.json
rl/: __init__.py  dqn_train.py  eval.py  eval_llm.py  eval_random.py  export_coreml.py  game_statistics.py  plots.py  qnet_torch.py  random_agent.py  sarsa_train.py
tui/: __init__.py  app.py  game_logic.py  screens.py  widgets.py
uno/: __init__.py  cards.py  encoding.py  rlcard_env.py  ruleset.py
web/: server.py
web/static/: app.js  index.html  styles.css
